[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/dialog/add_list_item.gd" type="Script" id=1]

[node name="DialogAddListItem" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CC" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="VC" type="VBoxContainer" parent="CC"]
margin_left = 387.0
margin_top = 229.0
margin_right = 637.0
margin_bottom = 371.0

[node name="LabelDesc" type="Label" parent="CC/VC"]
margin_right = 250.0
margin_bottom = 14.0
text = "Create a new list item"
align = 1

[node name="TextEdit" type="TextEdit" parent="CC/VC"]
margin_top = 18.0
margin_right = 250.0
margin_bottom = 118.0
rect_min_size = Vector2( 250, 100 )

[node name="HC" type="HBoxContainer" parent="CC/VC"]
margin_top = 122.0
margin_right = 250.0
margin_bottom = 142.0
alignment = 1

[node name="ButtonCreate" type="Button" parent="CC/VC/HC"]
margin_left = 69.0
margin_right = 122.0
margin_bottom = 20.0
disabled = true
text = "Create"

[node name="ButtonCancel" type="Button" parent="CC/VC/HC"]
margin_left = 126.0
margin_right = 180.0
margin_bottom = 20.0
text = "Cancel"

[connection signal="text_changed" from="CC/VC/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="CC/VC/HC/ButtonCreate" to="." method="_on_ButtonCreate_pressed"]
[connection signal="pressed" from="CC/VC/HC/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
